@@ -36,7 +36,7 @@ A new Raster* object, and in some cases the side effect of a new file on disk.
 
 \examples{
 r <- raster(ncol=10, nrow=10)
-r[]=1:ncell(r)
+values(r) <- 1:ncell(r)
 s <- brick(r,r,r,r,r,r)
 s <- s * 1:6
 b1 <- stackApply(s, indices=c(1,1,1,2,2,2), fun=sum)
